--- a/.env.example
+++ b/.env.example
@@ -12,4 +12,4 @@ CALENDAR_ID=primary
 
 # Settings
 TIMEZONE=America/Bogota
-DATABASE_URL=sqlite:///./appointments.db
+DATABASE_URL=postgresql://user:password@localhost:5432/dbname
